--- a/config_example.json
+++ b/config_example.json
@@ -1,1 +1,1 @@
-{"model": ["ollama/mistral"], "attack_modes": ["def", "art"], "classifier": ["har"], "extra": ["blacklisted_words=bomb"]}
+{"model": ["ollama/llama3.2"], "attack_modes": ["fuz", "fzr"], "classifier": ["har"], "extra": []}
